--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
-streamlit
-pandas
-openai
-langchain
-langgraph
-faiss-cpu
-perplexityai
-python-dotenv
-sentence-transformers
+streamlit==1.39.0
+pandas==2.2.3
+python-dotenv==1.0.1
+langchain==0.2.12
+faiss-cpu==1.9.0.post1
+sentence-transformers==2.7.0
+langgraph==0.1.10
+tqdm==4.66.5
+numpy==1.26.4
+scikit-learn==1.5.2
+requests==2.32.3
+langchain_community
+openpyxl
+tabulate
